[package]
name = "rust"
version = "0.1.0"
authors = ["Kyle McCarthy <km@kylemccarthy.io"]
edition = "2018"

[dependencies]
rand = "0.6.5"
failure = "0.1.5"
uuid = { version = "0.7", features = ["v4"] }
pancurses = "0.16"
cursive = { git = "https://github.com/gyscos/Cursive", default-features = false, features = ["pancurses-backend"] }
crossbeam-channel = "0.3"
ctrlc = { version = "3.0", features = ["termination"] }
crossbeam-utils = "0.6"
log = "0.4.6"
unicode-width = "0.1.5"
strum = "0.15.0"
strum_macros = "0.15.0"

